--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,12 @@
 name=ClosedCube SHT31D
-version=1.2.2
-author=ClosedCube
-maintainer=ClosedCube <github@closedcube.com>
-sentence=Arduino library for Sensirion SHT3X-DIS Digital Temperature & Humidity Sensors
-paragraph=Arduino library for Sensirion SHT30/31/35 Digital I2C Temperature & Humidity Sensors
+version=0.0.1
+license=MIT
+author=Garrett Hawes <hawesg@gmail.com>
+maintainer=Garrett Hawes <hawesg@gmail.com>
+sentence=A more complete SHT-3X(30/31/35) library.
+paragraph=Library for Sensirion SHT30/31/35 Digital I2C Temperature & Humidity Sensors, various modes, crc check, id's, etc..
 category=Sensors
-url=https://github.com/closedcube/ClosedCube_SHT31D_Arduino
-architectures=*
+url=https://github.com/hawesg/SHT31D_Particle_Photon_ClosedCube
+repository=hawesg/SHT31D_Particle_Photon_ClosedCube
+architectures=particle-photon
+build.particle-photon.firmware=particle@0.6.2
